examples/misc/error/compilation/trace_tail.bfr
let f () = failwith "f"

let g () = f ()

let h () = g ()

let i () = h ()

let _ = i ()

let main = $